[package]
name = "actix-web-sample"
version = "0.1.0"
authors = ["Eduardo León <edo.leon.g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ureq = { version = "1.1", features = ["json"] }
chrono = "0.4"
#cached = "0.13"